@@ -68,7 +68,7 @@
         The UNIX operating system was originally designed as a text-only
         system, controlled by commands entered with a keyboard. This is known
         as a command-line interface (CLI). The X Window System, Xfce, and other
-        projects have since added a graphical user interface to UNIX, thats
+        projects have since added a graphical user interface to UNIX, that's
         what you are actually using now. But the addition of a graphical user
         interface doesn't mean that the CLI is dead. The CLI is still around
         and is frequently the easiest, fastest, and most powerful way to perform
@@ -79,7 +79,7 @@
         &application; is what is known as an X terminal emulator, often referred
         to as terminal or shell. It provides an equivalent to the old-fashioned
         text screen on your desktop, but one which can easily share the screen
-        with other graphical applications. Windows users may already be familar
+        with other graphical applications. Windows users may already be familiar
         with the MS-DOS Prompt utility, which has the analogous function of
         offering a DOS command-line under Windows, though one should note that
         the UNIX CLI offer far more power and ease of use than does DOS.
@@ -236,7 +236,7 @@
         &application; provides a tab feature that enables you to open several terminals
         within a single window. Each terminal is opened in a separate tab. Click on the
         appropriate tab to display the terminal in the window. Each tabbed terminal in
-        a window is separate subprocess, so you can use each terminal for a different
+        a window is separate sub-process, so you can use each terminal for a different
         task.
       </para>
 
@@ -849,7 +849,7 @@
           <listitem>
             <para>Click on the <guilabel>Text color</guilabel> button to choose the color
             &application; uses to draw normal text - an application running inside the terminal can
-            also request a different color choosen from the palette below to draw text.</para>
+            also request a different color chosen from the palette below to draw text.</para>
 
             <para>Click on the <guilabel>Background color</guilabel> button to choose the
             default background for terminal windows. This color is also used in background
@@ -1099,7 +1099,7 @@
 
       <para>
         When &application; is started from the command line or from a panel launcher, several options
-        can be specified to modify its behaviour.
+        can be specified to modify its behavior.
       </para>
 
       <variablelist>
@@ -1494,7 +1494,7 @@ MiscTabCloseButtons=TRUE</programlisting>
 
     <para>The intent of this section is to collect the quite numerous frequently asked
     question that relate to working with &application;, or even terminal emulators in general. If
-    you know of a question thats missing from this page, please <ulink url="http://bugzilla.xfce.org/enter_bug.cgi?product=Terminal&amp;format=guided">file a request</ulink>.</para>
+    you know of a question that's missing from this page, please <ulink url="http://bugzilla.xfce.org/enter_bug.cgi?product=Terminal&amp;format=guided">file a request</ulink>.</para>
 
     <sect3>
       <title>&application; complains about <literal>Unable to start terminal server: Unable to connect
