@@ -1,3 +1,8 @@
+2006-02-09	Benedikt Meurer <benny@xfce.org>
+
+	* doc/C/Terminal.xml.in: Apply Daichi's documentation patch to fix
+	  various typos. Bug #1443.
+
 2006-02-08	Benedikt Meurer <benny@xfce.org>
 
 	* NEWS, THANKS: Apply Daichi's name correction patch.
